src/instructions/snapshots/osrm_extensions__instructions__voice_announcements__tests__depart_announcement.snap
---
source: src/instructions/voice_announcements.rs
expression: announcements
---
[
    Depart(
        Distance {
            value: 468.0137,
            unit: Meters,
        },
    ),
    Maneuver(
        Distance {
            value: 70.0,
            unit: Meters,
        },
    ),
]
